--- a/PIMC-py/Normalizingflow_fields/field prototypes.ipynb
+++ b/PIMC-py/Normalizingflow_fields/field prototypes.ipynb
@@ -1525,7 +1525,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "89c3293b",
    "metadata": {},
    "outputs": [
@@ -1533,20 +1533,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "torch.Size([64, 64])\n",
-      "tensor([[ 0.0000e+00,  0.0000e+00,  0.0000e+00,  ...,  0.0000e+00,\n",
-      "          0.0000e+00,  0.0000e+00],\n",
-      "        [ 0.0000e+00,  6.4000e+01,  2.5979e-16,  ..., -1.1921e-07,\n",
-      "          5.1957e-16,  0.0000e+00],\n",
-      "        [-3.8968e-16,  3.8968e-16,  3.2000e+01,  ..., -3.4916e-08,\n",
-      "          4.7821e-07, -7.8438e-23],\n",
-      "        ...,\n",
-      "        [ 0.0000e+00, -2.3842e-07, -1.3966e-07,  ...,  1.2800e+02,\n",
-      "         -2.7932e-07,  2.7932e-07],\n",
-      "        [ 0.0000e+00,  0.0000e+00,  0.0000e+00,  ...,  4.1566e-15,\n",
-      "          9.6000e+01,  5.8783e-15],\n",
-      "        [ 0.0000e+00,  0.0000e+00,  1.0588e-22,  ...,  4.1566e-15,\n",
-      "          5.8783e-15,  9.6000e+01]])\n"
+      "torch.float64\n"
      ]
     }
    ],
@@ -1554,54 +1541,160 @@
     "import torch\n",
     "import numpy as np\n",
     "from lattice import Lattice\n",
+    "torch.set_default_dtype(torch.float64)\n",
     "latt = Lattice([4,4,4],[16,16,16])\n",
     "O = latt.ort_mat\n",
-    "k_mu = latt.get_k_mu(1)\n",
-    "print(k_mu.shape)\n",
-    "K = latt.get_kin_mat()\n",
+    "K = latt.kin_mat\n",
     "diag = torch.einsum(\"ji,jk,ks->is\",O,K,O)\n",
-    "print(diag)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "id": "465cdfdf",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "arr = np.array([1,2])\n",
-    "arr1 = np.array(arr)"
+    "print(diag.dtype)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "d869c445",
+   "id": "98148207",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import torch\n",
+    "import numpy as np\n",
+    "from lattice import Lattice\n",
+    "latt = Lattice([4,4,4],[16,16,16])\n",
+    "norm_dist = torch.distributions.Normal(loc = torch.zeros(latt.total_nodes), scale = torch.ones(latt.total_nodes))\n",
+    "d = torch.diag(latt.get_diag_kin_mat())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "7f834acf",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "Distribution_set.__init__() takes from 2 to 3 positional arguments but 4 were given",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mTypeError\u001b[39m                                 Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[3]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m tl = \u001b[43mlatt\u001b[49m\u001b[43m.\u001b[49m\u001b[43mget_train_loader\u001b[49m\u001b[43m(\u001b[49m\u001b[32;43m2\u001b[39;49m\u001b[43m*\u001b[49m\u001b[43m*\u001b[49m\u001b[32;43m18\u001b[39;49m\u001b[43m,\u001b[49m\u001b[32;43m2\u001b[39;49m\u001b[43m*\u001b[49m\u001b[43m*\u001b[49m\u001b[32;43m12\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[32m      2\u001b[39m batch = \u001b[38;5;28mnext\u001b[39m(\u001b[38;5;28miter\u001b[39m(tl))\n\u001b[32m      3\u001b[39m \u001b[38;5;28mprint\u001b[39m(batch.device)\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m~/PIMC/PIMC/PIMC-py/Normalizingflow_fields/lattice.py:139\u001b[39m, in \u001b[36mLattice.get_train_loader\u001b[39m\u001b[34m(self, epoch_size, batch_size)\u001b[39m\n\u001b[32m    138\u001b[39m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34mget_train_loader\u001b[39m(\u001b[38;5;28mself\u001b[39m,epoch_size,batch_size):\n\u001b[32m--> \u001b[39m\u001b[32m139\u001b[39m     DS = \u001b[43mDistribution_set\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43mnormal_sampler\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\u001b[43m,\u001b[49m\u001b[43mepoch_size\u001b[49m\u001b[43m,\u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43mdevice\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m    140\u001b[39m     train_loader = DataLoader(DS, batch_size, shuffle=\u001b[38;5;28;01mTrue\u001b[39;00m)\n\u001b[32m    141\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m train_loader\n",
+      "\u001b[31mTypeError\u001b[39m: Distribution_set.__init__() takes from 2 to 3 positional arguments but 4 were given"
+     ]
+    }
+   ],
+   "source": [
+    "tl = latt.get_train_loader(2**18,2**12)\n",
+    "batch = next(iter(tl))\n",
+    "print(batch.device)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "id": "d421aeec",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "torch.Size([64, 64])\n"
+      "tensor([[ 1.,  1.],\n",
+      "        [ 1., -1.],\n",
+      "        [ 1.,  1.],\n",
+      "        [ 1., -1.],\n",
+      "        [ 1.,  1.],\n",
+      "        [ 1., -1.],\n",
+      "        [ 1.,  1.],\n",
+      "        [ 1., -1.],\n",
+      "        [ 1.,  1.],\n",
+      "        [ 1., -1.],\n",
+      "        [ 1.,  1.],\n",
+      "        [ 1., -1.],\n",
+      "        [ 1.,  1.],\n",
+      "        [ 1., -1.],\n",
+      "        [ 1.,  1.]])\n"
      ]
     }
    ],
    "source": [
-    "id = torch.eye(8)\n",
-    "id1=torch.eye(8)\n",
-    "kr = torch.kron(id,id1)\n",
-    "print(kr.shape)"
+    "n_cols = (N+1)//2-1\n",
+    "\n",
+    "column = torch.arange(1,n_cols+1)\n",
+    "line = torch.arange(N)\n",
+    "args = (2*np.pi/N) * torch.einsum('i,j->ij',line,column)\n",
+    "\n",
+    "ort = torch.zeros((N,2*n_cols))\n",
+    "ort[:,np.arange(0,2*n_cols,2)] = torch.cos(args)\n",
+    "ort[:,np.arange(1,2*n_cols,2)] = torch.sin(args)\n",
+    "ort = (2/N)**0.5 * ort\n",
+    "\n",
+    "first = torch.ones((N,1))\n",
+    "if N%2!=0:\n",
+    "    signed = torch.ones((N,1))\n",
+    "    signed[np.arange(1,N,2),:] = -1\n",
+    "    first = torch.cat((first,signed),1)\n",
+    "\n",
+    "ort = torch.cat((first,ort),1)    \n",
+    "print(first)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "69396972",
+   "execution_count": 73,
+   "id": "8a586349",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def get_ort_mat(N,dtype=torch.float64,fmt=\"torch\"):\n",
+    "\n",
+    "    n_cols = (N+1)//2-1\n",
+    "\n",
+    "    column = torch.arange(1,n_cols+1,dtype=torch.float64)\n",
+    "    line = torch.arange(N,dtype=dtype)\n",
+    "    args = (2*np.pi/N) * torch.einsum('i,j->ij',line,column)\n",
+    "\n",
+    "    ort = torch.zeros((N,2*n_cols),dtype=dtype)\n",
+    "    ort[:,np.arange(0,2*n_cols,2)] = torch.cos(args)\n",
+    "    ort[:,np.arange(1,2*n_cols,2)] = torch.sin(args)\n",
+    "    ort = (2/N)**0.5 * ort\n",
+    "\n",
+    "    first = torch.ones((N,1),dtype=dtype)\n",
+    "    if N%2==0:\n",
+    "        signed = torch.ones((N,1))\n",
+    "        signed[np.arange(1,N,2),:] = -1\n",
+    "        first = torch.cat((first,signed),1)\n",
+    "    first = first * N ** (-0.5)\n",
+    "    \n",
+    "    ort = torch.cat((first,ort),1)\n",
+    "\n",
+    "    if fmt == \"np\":\n",
+    "        ort = ort.numpy()\n",
+    "\n",
+    "    return ort    \n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
+   "id": "88bf28c7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "torch.float64\n"
+     ]
+    }
+   ],
+   "source": [
+    "from transforms import get_O, t_get_O\n",
+    "o = get_ort_mat(32)\n",
+    "id = torch.einsum(\"ij,ik->jk\",o,o)\n",
+    "print(o.dtype)"
+   ]
   }
  ],
  "metadata": {
